--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,7 +51,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\ActionButton.cs" />
      <Compile Include="Assets\HPParticle\Scripts\AlwaysFace.cs" />
      <Compile Include="Assets\HPParticle\Scripts\CameraScript.cs" />
      <Compile Include="Assets\HPParticle\Scripts\DestroyAfter.cs" />
@@ -65,7 +64,7 @@
      <Compile Include="Assets\HPParticle\Scripts\ProjectileShooterScript.cs" />
      <Compile Include="Assets\Script\AI\AILeader.cs" />
      <Compile Include="Assets\Script\AI\AIManager.cs" />
-     <Compile Include="Assets\Script\AI\AIUnit.cs" />
+     <Compile Include="Assets\Script\AI\AIUnits.cs" />
      <Compile Include="Assets\Script\Board\Hotpoint.cs" />
      <Compile Include="Assets\Script\Board\Spawnpoint.cs" />
      <Compile Include="Assets\Script\Buildable\Buildable.cs" />
@@ -88,6 +87,7 @@
      <Compile Include="Assets\Script\Test\MonsterOrc.cs" />
      <Compile Include="Assets\Script\Test\UITestManager.cs" />
      <Compile Include="Assets\Script\trap.cs" />
+     <Compile Include="Assets\Script\UI\ActionButton.cs" />
      <Compile Include="Assets\Script\UI\AudioManager.cs" />
      <Compile Include="Assets\Script\UI\GameManager.cs" />
      <Compile Include="Assets\Script\UI\TextFadeScript.cs" />
@@ -121,13 +121,10 @@
      <None Include="Assets\SFX\Menu theme\Note from author.txt" />
      <None Include="Assets\HPParticle\Third Person Character\Third Person Character Guidelines.txt" />
  <Reference Include="Facebook.Unity.Settings">
- <HintPath>/Users/juliocesarsoaresfalconecunha/Documents/College/Final/Prototype/Prototype1/Library/FacebookSDK/Facebook.Unity.Settings.dll</HintPath>
+ <HintPath>/Users/jcfalcone/Documents/Backup/Projects/Software/College/Prototype1/Library/FacebookSDK/Facebook.Unity.Settings.dll</HintPath>
  </Reference>
- <Reference Include="UnityEngine.UI">
- <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
- </Reference>
- <Reference Include="UnityEngine.Networking">
- <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
+ <Reference Include="UnityEngine.Analytics">
+ <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.TestRunner">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/TestRunner/UnityEngine.TestRunner.dll</HintPath>
@@ -135,11 +132,14 @@
  <Reference Include="nunit.framework">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/TestRunner/net35/unity-custom/nunit.framework.dll</HintPath>
  </Reference>
+ <Reference Include="UnityEngine.Networking">
+ <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.UI">
+ <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEngine.Timeline">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Timeline/RuntimeEditor/UnityEngine.Timeline.dll</HintPath>
- </Reference>
- <Reference Include="UnityEngine.Analytics">
- <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.HoloLens">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityHoloLens/RuntimeEditor/UnityEngine.HoloLens.dll</HintPath>
